all functions are changed to method refactoring completed.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <li class="list-item" id="contact-btn">Contact</li>
       </ul>
     </nav>
+    <section class="time">
+      <p id="date-time"></p>
+    </section>
     <section id="add-book">
       <h2>Add New Book</h2>
       <form id="add-book">
