Contact page add with style.

--- a/index.html
+++ b/index.html
@@ -39,11 +39,21 @@
       <div id="collection"></div>
     </section>
     <section id="contact">
-      <h2>Contact</h2>
+      <h2>Contact Information</h2>
+      <p>Do Your have any questions or just want to say "Hello"?<span id="shot-text">You can reach out to us!</span></p>
+      <ul>
+        <li>Our Email: hidarahmadi5@gmail.com</li>
+        <li>Our Phone number: +93795810811</li>
+        <li>Our Address: Kabul Afghanistan</li>
+      </ul>
     </section>
   </main>
 
-  <script src="JS/script.js"></script>
+  <footer class="footer">
+    <p class="footer-text">&copy;All right reseved 2022</p>
+  </footer>
+
+  <script src="JS/Script.js"></script>
 </body>
 
 </html>
